<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_graph"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="xyz.wuhen.calculator.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_titleFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="xyz.wuhen.calculator.QuestionFragment"
        android:label="@string/question_toolbar_message"
        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment" />
        <action
            android:id="@+id/action_questionFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
        <action
            android:id="@+id/action_questionFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/loseFragment"
        android:name="xyz.wuhen.calculator.LoseFragment"
        android:label="@string/lose_message"
        tools:layout="@layout/fragment_lose" >
        <action
            android:id="@+id/action_loseFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="xyz.wuhen.calculator.WinFragment"
        android:label="@string/win_message"
        tools:layout="@layout/fragment_win" >
        <action
            android:id="@+id/action_winFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
</navigation>